Squashing TGR-1074: Scenario Outlines zählen weiter